buildscript {
    repositories {
        mavenCentral()
    }
}

plugins {
    id "org.jetbrains.intellij" version "1.3.0"
    //https://plugins.jetbrains.com/docs/intellij/kotlin.html#kotlin-standard-library
    id "org.jetbrains.kotlin.jvm" version "1.4.32"
}

ext {
    kotlinVersion = '1.4.32'
    jBehaveVersion = '4.8.3'
    jUnitVersion = '4.13'
    assertJVersion = '3.20.2'
    mockitoVersion = '3.11.2'
}

java {
    sourceCompatibility = JavaVersion.VERSION_11
    targetCompatibility = JavaVersion.VERSION_11
}

repositories {
    mavenCentral()
}

apply plugin: 'java'
apply plugin: 'kotlin'
apply plugin: 'org.jetbrains.intellij'
apply plugin: 'idea'

intellij {
    version = '2021.1'
    //https://plugins.jetbrains.com/plugin/6954-kotlin/versions/stable
    plugins = ['org.jetbrains.kotlin:211-1.4.32-release-IJ6693.72', 'java']
    pluginName = 'JBehave Support'
    updateSinceUntilBuild = false
}

wrapper {
    gradleVersion '7.1.1'
}

dependencies {
    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlinVersion"
    implementation "org.jbehave:jbehave-core:$jBehaveVersion"
    testImplementation "junit:junit:$jUnitVersion"
    testImplementation "org.assertj:assertj-core:$assertJVersion"
    testImplementation "org.mockito:mockito-core:$mockitoVersion"
}

patchPluginXml {
    version = provider { '1.55' }
    changeNotes = provider { """<h4>1.55</h4><ul><li>Upgraded plugin to work with IJ-2021.3.</li>""" }
}

//runPluginVerifier {
//    ideVersions = ['IC-2021.1']
//}

//publishPlugin {
//    token intellijPublishToken
//}
